--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Football</title>
 </head>
 <body>
-    <header>
+    <header id="header">
 
         <div class="container">
 
@@ -26,7 +26,7 @@
                 <div class="login">
 
                     <i class="fas fa-sign-in-alt"></i>
-                    <h3>Login</h3>
+                    <p>Login</p>
 
                 </div>
 
@@ -35,8 +35,14 @@
     
             <div class="headInfo">
 
-                <div></div>
-                <div></div>
+                <div class="title">
+                    <h1>Historical Copa America 2021</h1>
+                    <button>Watch live<i class="fas fa-arrow-right"></i></button>
+                </div>
+                
+                <div class="banner">
+                    <img src="images/banner.png" alt="">
+                </div>
 
             </div>
 
