player info section added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <h1>Historical Copa America 2021</h1>
                     <button>Watch live<i class="fas fa-arrow-right"></i></button>
                 </div>
-                
+
                 <div class="banner">
                     <img src="images/banner.png" alt="">
                 </div>
@@ -49,6 +49,86 @@
         </div>
         
     </header>
+
+    <main>
+
+        <section id="playerInfo">
+
+            <div class="container-1">
+
+                <div class="players">
+
+                    <div class="player">
+                        <img src="images/players/player-3.png" alt="">
+                        <h3>Cristiano Ronaldo</h3>
+                        <p>Cristiano Ronaldo is a great player of all time. He won Ballon D or recently. He plays amazing. He is from Portugal.</p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-2.png" alt="">
+                        <h3>Leonel Messi</h3>
+                        <p>Leonel Messi is a magician of football. He plays really amazing. He knows all the tectics to win any match. He is from Argentina.</p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <h3>Neymer Jr</h3>
+                        <p>Neymer Jr is from Brazil. This young star welly know how to play well in any circumstances. He is pride of Brazilian football team.</p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-5.png" alt="">
+                        <h3>Mesut Ozil </h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi magni repellendus ut fuga laboriosam accusantium nemo iste amet doloremque sed?</p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-4.png" alt="">
+                        <h3>Paulo Dybala</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae accusantium nihil, fugiat consequatur facere ratione neque expedita ducimus assumenda culpa.</p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-6.png" alt="">
+                        <h3>Mauro Icardi </h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur rerum sed saepe soluta facilis necessitatibus quod ullam autem nam ex.</p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-7.png" alt="">
+                        <h3>Di Maria</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt iusto quod molestias beatae magnam, maiores voluptates ipsam consequuntur ipsa in?</p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-8.png" alt="">
+                        <h3>Kylian Mbappé</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate officia optio vero, deserunt natus dolorem inventore sequi alias animi voluptas.</p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-9.png" alt="">
+                        <h3>Mohamed Salah</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita veniam incidunt distinctio, itaque nihil dolor assumenda vero quas saepe consequuntur.</p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-10.png" alt="">
+                        <h3>Harry Kane</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos saepe voluptatibus eius temporibus, hic eveniet enim explicabo assumenda corporis possimus.</p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-11.png" alt="">
+                        <h3>Kevin De Bruyne</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa numquam mollitia inventore cum soluta quia incidunt totam nihil reiciendis fuga.</p>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-12.png" alt="">
+                        <h3>Philippe Coutinho</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus odio quasi impedit nulla quae. Doloribus vitae iusto incidunt rem quae.</p>
+                    </div>
+
+                </div>
+
+
+            </div>
+
+
+
+        </section>
+
+    </main>
 
 </body>
 </html>
