some issue fixed

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Football</title>
 </head>
 <body>
+
+    <!-- header start -->
     <header id="header">
 
         <div class="head-container">
@@ -27,12 +29,16 @@
 
             </nav>
 
+            <!-- this nav is for media query for responsive -->
+
             <nav class="responsiveNav">
                 <i class="fas fa-bars"></i>
 
                 <button class="button rButton"><i class="fas fa-sign-in-alt"></i>Login</button>
 
             </nav>
+
+            <!-- heading info -->
 
     
             <div class="headInfo responsive">
@@ -52,7 +58,13 @@
         
     </header>
 
+    <!-- header end -->
+
+    <!-- main body start -->
+
     <main>
+
+        <!-- this section is for players info -->
 
         <section id="playerInfo">
 
@@ -130,6 +142,8 @@
 
         </section>
 
+        <!-- this is for match highlights -->
+
         <section id="highlights">
 
             <div class="container">
@@ -157,6 +171,8 @@
 
         </section>
 
+        <!-- this is photo gallery -->
+
         <section class="photoGallery">
 
             <div class="container gallery">
@@ -175,6 +191,8 @@
             </div>
 
         </section>
+
+        <!-- this is best player section -->
 
         <section class="bestPlayers">
 
@@ -208,13 +226,21 @@
 
     </main>
 
+    <!-- main body end -->
+
+    <!-- footer start -->
+
     <footer>
 
         <div class="container">
 
             <div class="footer">
 
+                <!-- footer logo -->
+
                 <img src="images/Logo.png" alt="">
+
+                <!-- social media icons -->
 
                 <div class="icons">
                     <ul>
@@ -234,6 +260,8 @@
         </div>
 
     </footer>
+
+    <!-- footer end -->
 
 </body>
 </html>
